--- a/classes/10/notebooks/assignment-10-logistic-regression-starter-code.ipynb
+++ b/classes/10/notebooks/assignment-10-logistic-regression-starter-code.ipynb
@@ -8,11 +8,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interpreting Logistic regression coefficients\n",
+    "\n",
+    "\"All else held equal, if you predictor increases by 1 unit, the odds will be multiplies by $e^{b_1} (e to the power of the predictor's associated coefficient)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -56,13 +63,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "P_heads = float(1)/2\n",
+    "print P_heads"
    ]
   },
   {
@@ -85,13 +100,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "Odds_coin = P_heads/(1-P_heads)\n",
+    "print Odds_coin"
    ]
   },
   {
@@ -103,13 +126,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of weight loss with diet A is  0.9\n",
+      "Odds of weight loss with diet A  9.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "P_a = float(18)/20\n",
+    "Odds_a = P_a/(1-P_a)\n",
+    "print \"Probability of weight loss with diet A is \", P_a\n",
+    "print \"Odds of weight loss with diet A \", Odds_a"
    ]
   },
   {
@@ -121,13 +155,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of weight loss with diet B is  0.8\n",
+      "Odds of weight loss with diet B  4.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "P_b = float(16)/20\n",
+    "Odds_b = P_b/(1-P_b)\n",
+    "print \"Probability of weight loss with diet B is \", P_b\n",
+    "print \"Odds of weight loss with diet B \", Odds_b"
    ]
   },
   {
@@ -139,13 +184,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.25"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "Odds_Ratio = Odds_a/Odds_b\n",
+    "Odds_Ratio"
    ]
   },
   {
@@ -157,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -168,13 +224,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>job</th>\n",
+       "      <th>marital</th>\n",
+       "      <th>education</th>\n",
+       "      <th>default</th>\n",
+       "      <th>...</th>\n",
+       "      <th>campaign</th>\n",
+       "      <th>pdays</th>\n",
+       "      <th>previous</th>\n",
+       "      <th>poutcome</th>\n",
+       "      <th>c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30</td>\n",
+       "      <td>unemployed</td>\n",
+       "      <td>married</td>\n",
+       "      <td>primary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>33</td>\n",
+       "      <td>services</td>\n",
+       "      <td>married</td>\n",
+       "      <td>secondary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>339</td>\n",
+       "      <td>4</td>\n",
+       "      <td>failure</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35</td>\n",
+       "      <td>management</td>\n",
+       "      <td>single</td>\n",
+       "      <td>tertiary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>330</td>\n",
+       "      <td>1</td>\n",
+       "      <td>failure</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>30</td>\n",
+       "      <td>management</td>\n",
+       "      <td>married</td>\n",
+       "      <td>tertiary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>59</td>\n",
+       "      <td>blue-collar</td>\n",
+       "      <td>married</td>\n",
+       "      <td>secondary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age          job  marital  education default ...  campaign pdays previous  \\\n",
+       "0   30   unemployed  married    primary      no ...         1    -1        0   \n",
+       "1   33     services  married  secondary      no ...         1   339        4   \n",
+       "2   35   management   single   tertiary      no ...         1   330        1   \n",
+       "3   30   management  married   tertiary      no ...         4    -1        0   \n",
+       "4   59  blue-collar  married  secondary      no ...         1    -1        0   \n",
+       "\n",
+       "  poutcome   c  \n",
+       "0  unknown  no  \n",
+       "1  failure  no  \n",
+       "2  failure  no  \n",
+       "3  unknown  no  \n",
+       "4  unknown  no  \n",
+       "\n",
+       "[5 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df"
+    "df.head()"
    ]
   },
   {
@@ -234,13 +421,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [\"N\",\"C\",\"C\",\"C\",\"C\",\"N\",\"C\",\"C\",\"C\",\"C\",\"C\",\"N\",\"N\",\"N\",\"N\",\"C\",\"N\"]\n",
+    "len(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[67, 12, 3, 4, 2, 2353, 2, 2, 3, 31, 12, 875, 32, 292, 24, 4, 2]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TODO\n",
+    "b = []\n",
+    "for x in df.columns:\n",
+    "    b.append(len(df[x].value_counts()))\n",
+    "b   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('N', 67),\n",
+       " ('C', 12),\n",
+       " ('C', 3),\n",
+       " ('C', 4),\n",
+       " ('C', 2),\n",
+       " ('N', 2353),\n",
+       " ('C', 2),\n",
+       " ('C', 2),\n",
+       " ('C', 3),\n",
+       " ('C', 31),\n",
+       " ('C', 12),\n",
+       " ('N', 875),\n",
+       " ('N', 32),\n",
+       " ('N', 292),\n",
+       " ('N', 24),\n",
+       " ('C', 4),\n",
+       " ('N', 2)]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# TODO"
+    "#drop \"job\" from the list:\n",
+    "df.drop('job', axis = 1, inplace = True)"
    ]
   },
   {
@@ -259,13 +528,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "no     4445\n",
+       "yes      76\n",
+       "Name: default, dtype: int64"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.default.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# TODO"
+    "df.default = df.default.apply(lambda value: 0 if value == 'no' else 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    4445\n",
+       "1      76\n",
+       "Name: default, dtype: int64"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.default.value_counts()"
    ]
   },
   {
@@ -297,7 +610,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -322,7 +635,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -365,7 +678,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -383,7 +696,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -408,7 +721,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -433,7 +746,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -464,9 +777,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
